# co

./: CMakeLists.txt  main.cpp  readme.md
accessory-files/: co.txt  commands.txt  cosys.txt  in2.txt  in3.txt  out2.txt  reserved  syantax definition.txt  table.txt  tmp.txt  tokens.txt
accessory-files/demos/: calclulator.txt  lexical-demo-with-prog.txt  lexical-demo.txt
asmfiles/: 2.asm  3.asm  hello.asm  io.asm  test.s
bak/: x86.cpp.bak
demos/: char.c  fib-re.c  qsort.c  switch.c  while.c
gccfiles/: gcc1.asm  gcc1.c
headers/: error.h  expression.h  expression_func_def.h  global.h  lex.h  optimizer.h  optimizer_func_def.h  quadruple.h  readfile.h  reg.h  reg_func_def.h  sdt.h  sdt_func_decl.h  table.h  utils.h  x86.h  x86_func_def.h
src/: error.cpp  expression.cpp  global.cpp  lex.cpp  optimizer.cpp  quadruple.cpp  readfile.cpp  regs.cpp  sdt.cpp  table.cpp  utils.cpp  x86.cpp
testfile_dir/: in2.c  in2.txt  in3.txt  io.asm  out1.txt  para_table.txt  quadruple.txt  run.sh  string_table.txt  table.txt  tokens.txt  x84.asm  x85.asm  x86.asm
testfile_dir/demos/: 1.txt  2.txt
testfiles/: in.txt  in2.txt  lexical-demo.txt
